k8s/05-service.yaml
# Service — expose Deployment ke dalam cluster dan luar cluster
#
# ClusterIP  : akses internal (pod ↔ pod, ingress → app)
# NodePort   : akses langsung dari luar cluster via IP node
#              URL: http://<node-ip>:30310

---
apiVersion: v1
kind: Service
metadata:
  name: backend-siaptes
  namespace: backend-siaptes
  labels:
    app: backend-siaptes
    app.kubernetes.io/name: backend-siaptes
spec:
  type: ClusterIP
  selector:
    app: backend-siaptes
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-siaptes-nodeport
  namespace: backend-siaptes
  labels:
    app: backend-siaptes
    app.kubernetes.io/name: backend-siaptes
spec:
  type: NodePort
  selector:
    app: backend-siaptes
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      nodePort: 30310
      protocol: TCP
